--- a/roles/telegraf/files/telegraf.conf
+++ b/roles/telegraf/files/telegraf.conf
@@ -382,8 +382,8 @@
   # client_id = ""
 
   ## Username and password to connect MQTT server.
-  # username = "telegraf"
-  # password = "metricsmetricsmetricsmetrics"
+  username = "telegraf"
+  password = "${MQTT_PASSWORD}"
 
   ## Optional TLS Config
   # tls_ca = "/etc/telegraf/ca.pem"
