--- a/tasks/repo_arch.yml
+++ b/tasks/repo_arch.yml
@@ -1,10 +1,10 @@
 ---
 - name: Set amd64 arch
-  set_fact:
+  ansible.builtin.set_fact:
     repo_arch: amd64
   when: ansible_architecture == "x86_64"
 
 - name: Set arm64 arch
-  set_fact:
+  ansible.builtin.set_fact:
     repo_arch: "{{ ansible_architecture }}"
   when: ansible_architecture == "arm64"
