--- a/host_vars/catafalco/vars.yml
+++ b/host_vars/catafalco/vars.yml
@@ -1,7 +1,6 @@
 ---
 # General variables
 hostname: "{{ inventory_hostname }}"
-timezone: Europe/Rome
 dot_nameservers:
   [
     185.95.218.42@853#dns.digitale-gesellschaft.ch,
@@ -20,9 +19,6 @@ shell: /usr/bin/zsh
 
 # File systems, partitions and mounts
 docker_dir: /var/opt/docker
-
-# Hard disk
-spindown_time: 600 # in seconds
 
 colorscheme: nord
 
@@ -225,17 +221,6 @@ samba_shares:
     valid_users: "@sambashare"
     write_list: "{{ username }} sara"
 
-  #  - name: Music
-  #    guest_ok: false
-  #    public: false
-  #    read_only: false
-  #    writable: true
-  #    browsable: true
-  #    owner: "{{ username }}"
-  #    path: "{{ mergerfs_root }}/Music"
-  #    valid_users: "@sambashare"
-  #    write_list: "{{ username }} sara"
-
   - name: Media
     guest_ok: false
     public: false
@@ -257,34 +242,26 @@ mergerfs_root: "{{ mounts_root_location }}/storage"
 cache_root: "{{ mergerfs_root }}_cache"
 
 data_disks:
-  - {
-      data_disk_id: 1,
-      label: Data1,
-      path: "{{ mounts_root_location }}/data1",
-      content: true,
-    }
-  - {
-      data_disk_id: 2,
-      label: Data2,
-      path: "{{ mounts_root_location }}/data2",
-      content: true,
-    }
+  - data_disk_id: 1
+    label: Data1
+    path: "{{ mounts_root_location }}/data1"
+    content: true
+  - data_disk_id: 2
+    label: Data2
+    path: "{{ mounts_root_location }}/data2"
+    content: true
 
 cache_disks:
-  - {
-      cache_disk_id: 1,
-      path: "{{ mounts_root_location }}/cache1",
-      label: Cache1,
-      content: true,
-    }
+  - cache_disk_id: 1
+    path: "{{ mounts_root_location }}/cache1"
+    label: Cache1
+    content: true
 
 parity_disks:
-  - {
-      parity_disk_id: 1,
-      path: "{{ mounts_root_location }}/parity1",
-      label: Parity1,
-      content: true,
-    }
+  - parity_disk_id: 1
+    path: "{{ mounts_root_location }}/parity1"
+    label: Parity1
+    content: true
 
 # SnapRAID
 snapraid_force_install: true
