--- a/roles/system/tasks/user.yml
+++ b/roles/system/tasks/user.yml
@@ -1,37 +1,34 @@
 ---
 - name: Set the name of a sudo group
-  set_fact:
+  ansible.builtin.set_fact:
     sudo_group: sudo
 
 - name: Create a login user
-  become: true
-  user:
+  ansible.builtin.user:
     name: "{{ username }}"
     password: "{{ password | password_hash('sha512') }}"
+    create_home: true
+    shell: "{{ shell }}"
     groups:
       - "{{ sudo_group }}"
       - users
-    shell: "{{ shell }}"
-    state: present
     append: true
+    state: present
 
 - name: Ensure exists group "{{ username }}"
-  become: true
-  group:
+  ansible.builtin.group:
     name: "{{ username }}"
     state: present
 
 - name: Ensure group "sambashare" exists
-  when: enable_samba | default(False)
-  become: true
-  group:
+  when: enable_samba | default(false)
+  ansible.builtin.group:
     name: sambashare
     state: present
 
 - name: Append the samba group
-  when: enable_samba | default(False)
-  become: true
-  user:
+  when: enable_samba | default(false)
+  ansible.builtin.user:
     name: "{{ username }}"
     groups:
       - sambashare
@@ -47,35 +44,22 @@
     validate: /usr/sbin/visudo -cf %s
 
 - name: Copy the public SSH key
-  become: true
-  authorized_key:
+  ansible.posix.authorized_key:
     user: "{{ username }}"
     state: present
     key: "{{ lookup('file', ssh_public_key) }}"
 
-- name: Set the default shell
-  user:
-    name: "{{ username }}"
-    shell: "{{ shell }}"
-
 - name: Suppress login messages
-  file:
+  ansible.builtin.file:
     name: /home/{{ username }}/.hushlogin
     mode: "0644"
     state: touch
     modification_time: preserve
     access_time: preserve
 
-- name: Set the correct ownership for the user's home folder (not using ansible.builtin.file because of idempotency)
-  ansible.builtin.command:
-    cmd: chown -R {{ username }}:{{ username }} /home/{{ username }}
-  register: chown_status
-  changed_when: chown_status.stdout != ""
-
 - name: Create additional users (no login)
   when: samba_users is defined
-  become: true
-  user:
+  ansible.builtin.user:
     name: "{{ item.name }}"
     groups: "{{ item.groups }}"
     password: "{{ item.password | password_hash('sha512') }}"
