--- a/pihole.yml
+++ b/pihole.yml
@@ -1,36 +1,35 @@
 ---
 - name: Set SSH correctly before executing other roles
-  hosts: pihole
-  pre_tasks:
-    - name: Set SSH correctly before executing other roles
-      import_tasks: tasks/ssh.yml
-      tags:
-        - port
+  hosts: pihole-one
+  become: true
 
-    - name: Install NTP/chrony
-      package:
-        name: "{{ 'chrony' if ansible_os_family == 'RedHat' else 'ntp' }}"
+  pre_tasks:
+#    - name: Set SSH correctly before executing other roles
+#      import_tasks: tasks/ssh.yml
+#      tags:
+#        - port
 
     - name: Configure timezone
-      timezone:
-        name: "UTC"  # or your preferred timezone
+      community.general.timezone:
+        name: "{{ timezone | default('UTC') }}"
 
-    - name: Enable and start time service
-      service:
-        name: "{{ 'chronyd' if ansible_os_family == 'RedHat' else 'ntp' }}"
-        enabled: yes
+    - name: Get current status of time synchronization
+      ansible.builtin.command: timedatectl show -P NTPSynchronized
+      register: ntp_status
+      changed_when: false
+
+    - name: Install NTP/chrony
+      when: ntp_status.stdout != "yes"
+      ansible.builtin.systemd:
+        name: systemd-timesyncd.service
         state: started
+        enabled: true
 
     - name: Set hostname
       ansible.builtin.hostname:
         name: "{{ inventory_hostname }}"
-#  roles:
-#    - role: geerlingguy.ntp
-#      tags:
-#        - ntp
-#    - role: zsh
-#      tags:
-#        - system
-#    - role: docker
-#      tags:
-#        - docker
+
+  tasks:
+    - name: Install Pi-hole
+      ansible.builtin.shell:
+        cmd: curl -sSL https://install.pi-hole.net | bash
