--- a/roles/system/tasks/zsh.yml
+++ b/roles/system/tasks/zsh.yml
@@ -1,3 +1,13 @@
+---
+- name: Installing Zsh and git
+  ansible.builtin.apt:
+    name:
+      - curl
+      - git
+      - zsh
+    state: present
+    update_cache: true
+
 - name: Set a custom ZDOTDIR
   ansible.builtin.lineinfile:
     path: /etc/zsh/zshenv
@@ -6,24 +16,35 @@
     group: root
     mode: "0644"
 
-- name: Get user information from /etc/passwd
-  ansible.builtin.getent:
-    database: passwd
-    key: "{{ username }}"
-
-- name: Set user home directory
-  ansible.builtin.set_fact:
-    user_home: "{{ getent_passwd[username][5] }}"
-
 - name: Ensure the directory for ZSH dotfile exists
   ansible.builtin.file:
-    path: "{{ user_home }}/.config/zsh"
+    path: "{{ ansible_env.HOME }}/.config/zsh"
     state: directory
     recurse: true
     owner: "{{ username }}"
     group: "{{ username }}"
     mode: "0755"
 
-# Add .zshenv
-# Add .zshrc
-# Add ohmyzsh
+- name: Copy the zshrc/zshenv file to the new location
+  ansible.builtin.copy:
+    src: "{{ item.src }}"
+    dest: "{{ item.dest }}"
+    owner: "{{ username }}"
+    group: "{{ username }}"
+    mode: 644
+  loop:
+    - src: "files/zshrc"
+      dest: "{{ ansible_env.HOME }}/.config/zsh/.zshrc"
+    - src: "files/zshenv"
+      dest: "{{ ansible_env.HOME }}/.config/zsh/.zshenv"
+
+- name: Install Oh-my-zsh
+  ansible.builtin.shell: |
+    sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" "" --unattended --keep-zshrc
+  args:
+    executable: /bin/sh
+  environment:
+    HOME: "{{ ansible_env.HOME }}"
+    ZDOTDIR: "{{ ansible_env.HOME }}/.config/zsh"
+    ZSH: "{{ ansible_env.HOME }}/.local/share/oh-my-zsh"
+  when: not (ansible_env.HOME | expanduser + '/.local/share/oh-my-zsh') is directory
