--- a/roles/nvidia/defaults/main.yml
+++ b/roles/nvidia/defaults/main.yml
@@ -1,7 +1,8 @@
+nvidia_driver_branch: latest  # 'latest' or 580, 590, ...
 nvidia_driver_packages:
   Debian:
     - nvidia-driver-cuda
     - nvidia-kernel-open-dkms
   Ubuntu:
-    - libnvidia-compute-580
-    - nvidia-dkms-580-open
+    - libnvidia-compute
+    - nvidia-dkms-open
