--- a/roles/authelia/tasks/main.yml
+++ b/roles/authelia/tasks/main.yml
@@ -28,7 +28,7 @@
     file: network.yml
 
 - name: Make sure that Authelia container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: "{{ authelia_container_name }}"
     image: docker.io/authelia/authelia:latest
     pull: true
