--- a/roles/deluge/tasks/main.yml
+++ b/roles/deluge/tasks/main.yml
@@ -24,7 +24,7 @@
     file: network.yml
 
 - name: Make sure that Deluge container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: "{{ deluge_container_name }}"
     image: binhex/arch-delugevpn:2.2.0-1-04
     pull: true
