--- a/roles/jellyfin/tasks/main.yml
+++ b/roles/jellyfin/tasks/main.yml
@@ -27,9 +27,9 @@
     file: network.yml
 
 - name: Make sure that Jellyfin container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: "{{ jellyfin_container_name }}"
-    image: ghcr.io/linuxserver/jellyfin:10.10.7
+    image: ghcr.io/linuxserver/jellyfin:latest
     pull: true
     networks:
       - name: "{{ jellyfin_network_name }}"
@@ -63,7 +63,6 @@
       - 105
     volumes:
       - "{{ docker_dir }}/{{ jellyfin_container_name }}:/config"
-      - "{{ mergerfs_root }}/Media/Transcodes:/config/data/transcodes"
       - "{{ mergerfs_root }}/Media/Movies:/data/movies"
       - "{{ mergerfs_root }}/Media/TV:/data/tv"
       - "{{ mergerfs_root }}/Media/Books:/data/books:ro"
@@ -74,9 +73,10 @@
       swag.uptime-kuma.enabled: "true"
       swag.uptime-kuma.monitor.name: "{{ jellyfin_dashboard_name }}"
       swag.uptime-kuma.monitor.url: "{{ jellyfin_dashboard_url }}"
+      swag.uptime-kuma.monitor.maxretries: "2"
 
 - name: Install the SWAG config files
-  template:
+  ansible.builtin.template:
     src: "{{ jellyfin_container_name }}.subdomain.conf.j2"
     dest: "{{ docker_dir }}/swag/nginx/proxy-confs/{{ jellyfin_container_name }}.subdomain.conf"
     owner: "{{ guid }}"
