--- a/roles/lazylibrarian/tasks/main.yml
+++ b/roles/lazylibrarian/tasks/main.yml
@@ -12,7 +12,7 @@
     file: network.yml
 
 - name: Make sure that LazyLibrarian container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: "{{ lazylibrarian_container_name }}"
     image: lscr.io/linuxserver/lazylibrarian
     pull: true
@@ -32,6 +32,7 @@
       swag.uptime-kuma.enabled: "true"
       swag.uptime-kuma.monitor.name: "{{ lazylibrarian_dashboard_name }}"
       swag.uptime-kuma.monitor.url: "{{ lazylibrarian_dashboard_url }}"
+      swag.uptime-kuma.monitor.maxretries: "2"
 
 - name: Install the SWAG config files
   template:
