--- a/roles/onlyoffice/tasks/main.yml
+++ b/roles/onlyoffice/tasks/main.yml
@@ -15,7 +15,7 @@
     - logs
 
 - name: Make sure that ONLYOFFICE container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: "{{ onlyoffice_container_name }}"
     image: onlyoffice/documentserver:8.2
     pull: true
