--- a/roles/openwebui/tasks/main.yml
+++ b/roles/openwebui/tasks/main.yml
@@ -12,7 +12,7 @@
     file: network.yml
 
 - name: Make sure that OpenWebUI container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: "{{ openwebui_container_name }}"
     image: ghcr.io/open-webui/open-webui:main
     pull: true
