--- a/roles/prowlarr/tasks/main.yml
+++ b/roles/prowlarr/tasks/main.yml
@@ -12,7 +12,7 @@
     file: network.yml
 
 - name: Make sure that FlareSolverr container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: flaresolverr
     image: ghcr.io/flaresolverr/flaresolverr:latest
     pull: true
@@ -25,7 +25,7 @@
     restart_policy: unless-stopped
 
 - name: Make sure that Prowlarr container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: "{{ prowlarr_container_name }}"
     image: lscr.io/linuxserver/prowlarr:develop
     pull: true
