--- a/roles/radarr/tasks/main.yml
+++ b/roles/radarr/tasks/main.yml
@@ -12,7 +12,7 @@
     file: network.yml
 
 - name: Make sure that Radarr container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: "{{ radarr_container_name }}"
     image: ghcr.io/linuxserver/radarr
     pull: true
