--- a/roles/readarr/tasks/main.yml
+++ b/roles/readarr/tasks/main.yml
@@ -12,7 +12,7 @@
     file: network.yml
 
 - name: Make sure that Readarr container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: "{{ readarr_container_name }}"
     image: lscr.io/linuxserver/readarr:develop
     pull: true
