--- a/roles/slskd/tasks/main.yml
+++ b/roles/slskd/tasks/main.yml
@@ -20,7 +20,7 @@
     file: network.yml
 
 - name: Make sure that slskd container is created and running
-  ansible.builtin.docker_container:
+  community.docker.docker_container:
     name: "{{ slskd_container_name }}"
     image: slskd/slskd:latest
     pull: true
