--- a/roles/socket_proxy/tasks/main.yml
+++ b/roles/socket_proxy/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Make sure that Docker Socket Proxy container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: "{{ socket_proxy_container_name }}"
     image: lscr.io/linuxserver/socket-proxy:latest
     pull: true
