--- a/roles/vllm/tasks/grafana.yml
+++ b/roles/vllm/tasks/grafana.yml
@@ -37,7 +37,7 @@
     mode: "0644"
 
 - name: Make sure that Grafana container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: "{{ vllm_container_name }}-grafana"
     image: grafana/grafana:latest
     pull: true
