--- a/roles/vllm/tasks/prometheus.yml
+++ b/roles/vllm/tasks/prometheus.yml
@@ -16,7 +16,7 @@
     mode: "0644"
 
 - name: Make sure that Prometheus container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: "{{ vllm_container_name }}-prometheus"
     image: prom/prometheus:latest
     pull: true
