--- a/roles/watchtower/tasks/main.yml
+++ b/roles/watchtower/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Make sure that Watchtower container is created and running
-  docker_container:
+  community.docker.docker_container:
     name: "{{ watchtower_container_name }}"
     image: containrrr/watchtower
     pull: true
@@ -8,6 +8,7 @@
     env:
       WATCHTOWER_CLEANUP: "true"
       WATCHTOWER_POLL_INTERVAL: "7200"
+      DOCKER_API_VERSION: "1.49"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     restart_policy: unless-stopped
