--- a/roles/whoami/tasks/main.yml
+++ b/roles/whoami/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Create 'whoami' container to test
-  docker_container:
+  community.docker.docker_container:
     name: whoami
     image: docker.io/traefik/whoami
     pull: true
